<resources>
    <string name="app_name">NewsClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_hot_news">新闻热点</string>
    <string name="drawer_day_image">每日看图</string>
    <string name="drawer_gank_io">干货</string>
    <string name="drawer_gank_io_girl">妹纸</string>
    <string name="drawer_title_more">更多</string>
    <string name="drawer_about">关于</string>

</resources>
