<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hot_news"
            android:icon="@drawable/ic_menu_camera"
            android:checked="true"
            android:title="@string/drawer_hot_news"/>
        <item
            android:id="@+id/nav_day_image"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_day_image"/>
        <item
            android:id="@+id/nav_gank_io"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_gank_io"/>
        <item
            android:id="@+id/nav_gank_io_girl"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_gank_io_girl"/>
    </group>

    <item android:title="@string/drawer_title_more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
